# ocean-dock

./: .gitignore  README.md  README_zh.md  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit  pre-push
_example/_exmaple_harness_init/.githooks/: commit-msg
_example/_exmaple_harness_init/.github/workflows/: harness-checks.yml
_example/_exmaple_harness_init/docs/architecture/: boundaries.md  overview.md
_example/_exmaple_harness_init/docs/conventions/: README.md
_example/_exmaple_harness_init/docs/design/: TEMPLATE.md
_example/_exmaple_harness_init/docs/plans/: current-sprint.md
_example/_exmaple_harness_init/scripts/: agent-verify.sh  check-doc-freshness.sh  check-layer-deps.sh  harness-check.sh
docs/: usage.md
hooks/: auto_check.sh  cleanup_stop.sh  guard_bash.sh  guard_write.sh  notify.sh  pre_compact.sh  session_start.sh  stop.sh
skills/: code-review.md  daily-report.md  project-nav.md  session-handoff.md
src/ocean_dock/: __init__.py  cli.py  models.py  session_store.py  utils.py
src/ocean_dock/commands/: export.py  harness_init.py  init.py  list.py  resume.py  setup.py  show.py  summary.py  switch.py
src/ocean_dock/harness/: __init__.py  generator.py
src/ocean_dock/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
templates/: .gitignore
templates/.githooks/: post-checkout  pre-push
tests/: __init__.py
