[project]
name = "ocean-dock"
version = "0.1.0"
description = "Session Manager & MCP Server for Claude Code — manage sessions, automate hooks, and extend AI with 12 MCP tools"
requires-python = ">=3.10"
keywords = ["claude-code", "mcp-server", "session-manager", "developer-tools", "cli", "hooks", "skills", "python", "anthropic", "ai-assistant", "productivity", "automation", "ocean-cli"]
dependencies = [
    "typer>=0.24.0",
    "rich>=14.0.0",
    "jsonlines>=4.0.0",
    "mcp>=1.9.0",
]

[project.scripts]
ocean-dock = "ocean_dock.cli:app"
dock = "ocean_dock.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ocean_dock*"]
